Features: Game Rendering, Game Filtering

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -5,6 +5,6 @@
     <button class="btn" class="btn btn-success" (click)="getGames()">
       Get Games
     </button>
-  </div></ng-template
->
+    <games [games]="games"></games></div
+></ng-template>
 <ng-template #loggedOut><login></login></ng-template>
